Add validations for prices

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -30,3 +30,7 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+# Custom validator errors
+price.invalid.negative=You cannot have a negative price!
+price.null.with.chargeable=If chargeable, you must have a price!
