add validation msg for coupon code amount

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -34,3 +34,4 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 # Custom validator errors
 price.invalid.negative=You cannot have a negative price!
 price.null.with.chargeable=If chargeable, you must have a price!
+couponcodeamount.invalid.negative=You cannot have a negative amount for a coupon code!
