add validation for shipping address

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -35,3 +35,4 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 price.invalid.negative=You cannot have a negative price!
 price.null.with.chargeable=If chargeable, you must have a price!
 couponcodeamount.invalid.negative=You cannot have a negative amount for a coupon code!
+invalid.address.for.shipping=If you're having your order shipped, you must choose a shipping address!
